--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_inappwebview: ^6.0.0 # Latest version
+  flutter_inappwebview: ^6.0.0 
   get: ^4.6.5
   google_mobile_ads:
-  http: ^1.4.0
   video_player: ^2.8.0
+  http: ^1.4.0
   chewie: ^1.4.0
   shared_preferences: ^2.2.3
   get_it: ^8.1.0
@@ -67,7 +67,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/assassins.jpg
+   - assets/images/profile.jpg
    
    
 
