--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ environment:
 dependencies:
   
   flutter_inappwebview: ^6.0.0 
+  firebase_auth:
+  cloud_firestore:
   get: ^4.6.5
+  firebase_core: ^2.24.2
   google_mobile_ads:
   video_player: ^2.8.0
   http: ^1.4.0
