--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  
+  onesignal_flutter: ^5.3.4
   cupertino_icons: ^1.0.8
   firebase_remote_config: ^4.4.7
   firebase_analytics: ^10.10.7
