--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,24 +12,33 @@ environment:
 
 dependencies:
   
-  flutter_inappwebview: ^6.0.0 
-  firebase_auth: ^5.1.0
-  cloud_firestore:
-  get: ^4.6.5
-  firebase_core: ^3.1.0
-  google_mobile_ads:
-  video_player: ^2.8.0
-  http: ^1.4.0
-  chewie: ^1.4.0
-  shared_preferences: ^2.2.3
-  get_it: ^8.1.0
+
   flutter:
     sdk: flutter
-
-  onesignal_flutter: ^5.3.4
-  cupertino_icons: ^1.0.8
+  # Firebase
+  firebase_core: ^3.1.0 
+  firebase_auth: ^5.7.0 
+  cloud_firestore: ^5.6.12 
   firebase_remote_config: ^5.0.1
   firebase_analytics: ^11.0.1
+
+  # Google
+  google_sign_in: ^6.1.5
+  google_mobile_ads: ^5.1.0 
+
+  # State Management & Services
+  get: ^4.6.5
+  get_it: ^8.1.0
+  shared_preferences: ^2.2.3
+  http: ^1.4.0
+
+  # Video & UI
+  video_player: ^2.8.0
+  chewie: ^1.4.0
+  onesignal_flutter: ^5.3.4
+  cupertino_icons: ^1.0.8
+  flutter_inappwebview: ^6.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +60,7 @@ flutter:
   
   assets:
    - assets/images/profile.jpg
+   - assets/images/google_logo.png
   
    
    
