--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cloud_firestore: ^5.6.12 
   firebase_remote_config: ^5.0.1
   firebase_analytics: ^11.0.1
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.0
 
   # Google
   google_sign_in: ^6.1.5
@@ -38,6 +40,8 @@ dependencies:
   onesignal_flutter: ^5.3.4
   cupertino_icons: ^1.0.8
   flutter_inappwebview: ^6.0.0
+
+
 
 
 dev_dependencies:
