--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:label="test1"
+        android:label="vidnow"
         android:name="${applicationName}"
         android:icon="@mipmap/vidnow_icon">
 
